2006-05-16  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/x11/gdkdnd-x11.c (_gdk_drag_get_protocol_for_display): Fall
	through the if branches so that *protocol always gets initialized.

2006-05-16  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/x11/gdkasync.c (_gdk_x11_get_window_child_info): Don't leak
	state.children when short-circuiting the return. N#29142

2006-05-12  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_ref_node): bring in
	sync with gtk_tree_model_sort_real_unref_node(),
	(gtk_tree_model_sort_free_level): first free the child levels, so
	they get a change to decrease the zero ref count of the parents,
	then fixup this level's zero ref count, and we also have to
	decrease the zero ref count for all children in this level which
	have ref count == 0.
	N#26600.

2006-05-12  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_list_position): When in toolbar,
	popup the list above the widget rather than down. N#29420

2006-05-11  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_list_setup): Monitor the button
	'focus-in/out-event' similar to menu mode to get focus returned where
	expected. N#29357

2006-05-11  Tomas Junnonen  <tomas.junnonen@nokia.com>

	* modules/input/gtkimcontextxim.c (gtk_im_context_xim_finalize):
	Dynamic IM module switching might not completely initialize XIM,
	don't crash if that happens. N#29346

2006-05-11  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): Take
	the 'vertical-separator' height into account to avoid scrollbars.
	N#29115

2006-05-10  Alexander Kanevskiy  <alexander.kanevskiy@nokia.com>

	* gtk/Makefile.am (maemo_gtk_im_switch_DEPENDENCIES): Added to fix
	issues with multi-threaded builds.

2006-05-10  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (BONUS_PADDING): Add magical 2px for list mode